wk_taa_taaqa/src/objects/EOI_Order_Integration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Instrumentation for testing and production Service Cloud Webservices</description>
    <fields>
        <fullName>Continuation_Call_Timeout__c</fullName>
        <description>This number will be used to set time out for all continuation callouts for EOI, as of now being used in below
(1) GetAccountInfo
(2) DQ Address Validation</description>
        <inlineHelpText>This number will be used to set time out for all continuation callouts for EOI, as of now being used in below
(1) GetAccountInfo
(2) DQ Address Validation</inlineHelpText>
        <label>Continuation Call Timeout</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GetAccountInfoServiceVersion__c</fullName>
        <description>This holds the service version of IIB GetAccountInfo Service</description>
        <inlineHelpText>This holds the service version of IIB GetAccountInfo Service</inlineHelpText>
        <label>GetAccountInfo Service Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIBURLGetAccountInfo__c</fullName>
        <description>This holds the IIB GetAccountInfo interface URL</description>
        <inlineHelpText>This holds the IIB GetAccountInfo interface URL</inlineHelpText>
        <label>IIB URL Get Account Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIB_Address_DQM_Service_Version__c</fullName>
        <label>IIB Address DQM Service Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIB_DQAddressValidationURL__c</fullName>
        <description>Holds IIB DQ Address Validation Service URL</description>
        <inlineHelpText>Holds IIB DQ Address Validation Service URL</inlineHelpText>
        <label>IIB DQ Address Validation URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsERPOrderCreationFromQuoteProposalOn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_ERPOrder_Creation_From_Proposal_On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsERPOrderIntegrationOn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_ERP_Order_Integration_On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggingFlag__c</fullName>
        <label>LoggingFlag</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLineItemsAllowed__c</fullName>
        <label>Max Line Items Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfRetries__c</fullName>
        <description>No of Retry if service fail to repond</description>
        <label>No of retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RetryInterval_Timeout__c</fullName>
        <description>Retry interval In Minutes for timeout exception</description>
        <label>RetryInterval Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceVersion__c</fullName>
        <label>ServiceVersion</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemName__c</fullName>
        <label>SourceSystemName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionMonitoringFlag__c</fullName>
        <label>TransactionMonitoringFlag</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WK_URLOrderIntegration__c</fullName>
        <label>WK_URLOrderIntegration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EOI Order Integration</label>
</CustomObject>